add technical role to user model and rename Role to UserRole